xkollarovap-project/xkollarovap-my-project-webapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xkollarovap-my-project-webapi
spec:
  replicas: 2
  selector:
      matchLabels:
        pod: xkollarovap-my-project-webapi-label
  template:
      metadata:
        labels:
          pod: xkollarovap-my-project-webapi-label
      spec:
        containers:
        - name: xkollarovap-my-project-webapi-container
          image: xkollarovap/my-project-webapi:1.0.0-37
          imagePullPolicy: Always
          ports:
          - name: webapi-port
            containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
