xkollarovap-project/xkollarovap-my-project-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: xkollarovap-my-project-webapi
spec:
  type: ClusterIP
  selector:
    pod: xkollarovap-my-project-webapi-label
  ports:
  - name: webapi-s-port
    protocol: TCP
    port: 80
    targetPort: 8080
